//https://s1.hdslb.com/bfs/static/blive/blfe-live-room/static/js/app.****.js
// bilibili.live.gift.v1.SendGiftBroadcast
syntax = "proto3";
package bilibili.live.gift.v1.SendGiftBroadcast;
message SendGiftBroadcast {
	int64	uid = 1;
	string	uname = 2;
	string	face = 3;
	string	name_color = 4;
	int64	guard_level = 5;
	int64	svga_block = 6;
	SendMaster	send_master = 7;
	MedalInfo	medal_info = 8;
	BlindGift	blind_gift = 9;
	repeated GiftItem	gift_list = 10;
	bool	switch = 11;
	// bytes	unknown12 = 12;
	WealthInfo	wealth_info = 13;
	GroupMedalBrief	group_medal = 14;
	UserInfo	sender_uinfo = 15;
	// bytes	unknown16 = 16;
	// bytes	unknown17 = 17;
	// bytes	unknown18 = 18;
	// bytes	unknown19 = 19;
	// bytes	unknown20 = 20;
	// bytes	unknown21 = 21;
	// bytes	unknown22 = 22;
	// bytes	unknown23 = 23;
	// bytes	unknown24 = 24;
	// bytes	unknown25 = 25;
	// bytes	unknown26 = 26;
	// bytes	unknown27 = 27;
	// bytes	unknown28 = 28;
	// bytes	unknown29 = 29;
	// bytes	unknown30 = 30;
	// bytes	unknown31 = 31;
	// bytes	unknown32 = 32;
}
message GiftItem{
	int64	gift_id = 1;
	string	gift_name = 2;
	int64	num = 3;
	int64	demarcation = 4;
	int64	price = 5;
	int64	discount_price = 6;
	int64	total_coin = 7;
	string	coin_type = 8;
	string	tid = 9;
	int64	timestamp = 10;
	int64	super_batch_gift_num = 11;
	string	batch_combo_id = 12;
	int64	combo_resources_id = 13;
	int64	combo_total_coin = 14;
	int64	combo_stay_time = 15;
	float	magnification = 16;
	bool	show_batch_combo_send = 17;
	string	action = 18;
	int64	effect_block = 19;
	int64	is_special_batch = 20;
	int64	float_sc_resource_id = 21;
	string	tag_image = 22;
	int64	crit_prob = 23;
	int64	rcost = 24;
	int64	test = 25;
	int64	face_effect_type = 26;
	int64	face_effect_id = 27;
	bool	is_naming = 28;
	ReceiveUserInfo	receive_user_info = 29;
	bool	is_join_receiver = 30;
	BagGiftInfo	bag_gift = 31;
	UserInfo receiver_uinfo = 33;
}
message ReceiveUserInfo{
	string	uname = 1;
	int64	uid = 2;
}
message SendMaster{
	int64	uid = 1;
	string	uname = 2;
}
message BlindGift{
	int64	blind_gift_config_id = 1;
	int64	original_gift_id = 2;
	string	original_gift_name = 3;
	int64	from = 4;
	string	gift_action = 5;
	int64	original_gift_price = 6;
	int64	gift_tip_price = 7;
}
message BagGiftInfo{
	int32	show_price = 1;
	int64	price_for_show = 2;
}
message MedalInfo{
	int64	target_id = 1;
	string	special = 2;
	string	anchor_uname = 3;
	int64	anchor_roomid = 4;
	int64	medal_level = 5;
	string	medal_name = 6;
	int64	medal_color = 7;
	int64	medal_color_start = 8;
	int64	medal_color_end = 9;
	int64	medal_color_border = 10;
	int64	is_lighted = 11;
	int64	guard_level = 12;
}
message WealthInfo{
	int64	level = 1;
}
message Base{
	string	name = 1;
	string	face = 2;
	bool	is_mystery = 3;
	int32	level = 4;
}
message UserInfo{
	int64	uid = 1;
	Base	base = 2;
	UserInfoRCI risk_ctrl_info = 5;
	UserInfoOGI origin_info = 6;
	UserInfoOFI official_info = 7;
}
message GroupMedalBrief{
	int64	medal_id = 1;
	string	name = 2;
	int64	is_lighted = 3;
}
message UserInfoRCI{
	string	name = 1;
	string	face = 2;
}
message UserInfoOGI{
	string	name = 1;
	string	face = 2;
}
message UserInfoOFI{
	int32 role = 1;
	string title = 2;
	bytes unknown03 = 3;
	int32 type = 4;
}
