//https://s1.hdslb.com/bfs/static/blive/blfe-live-room/static/js/app.****.js
//https://s1.hdslb.com/bfs/static/player/main/core.****.js
// DANMU_MSG dm_v2
syntax = "proto3";
package bilibiliDm.community.service.dm.live;
message Dm {
    string                  id_str          = 1;    // [0][15].extra.id_str 新idstr
    int32                   mode            = 2;    // [0] [1] 弹幕类型
    int32                   size            = 3;    // [0] [2] 弹幕字号
    uint32                  color           = 4;    // [0] [3] 弹幕颜色
    string                  uhash           = 5;    // [0] [7] 发送者midHash
    string                  text            = 6;    // [1]     弹幕正文
    int64                   date            = 7;    // [0] [4] 发送时间TimeStamp(ms)
    int32                   weight          = 8;    // 
    int64                   rnd             = 9;    // [0] [5]
    int64                   attr            = 10;   // 
    BizScene                biz_scene       = 11;   // 
    Bubble                  bubble          = 12;   // [0][11] chatBubble
    DmType                  dm_type         = 13;   // [0][12] DmType
    // map<string,Emoticon>    emoticons       = 14;   // [0][15] 表情 repeated
    repeated emots_temp     emoticons       = 14;   // [0][15] 表情 repeated
    Voice                   voice           = 15;   // [0][14]
    string                  animation       = 16;   // 
    Aggregation             aggregation     = 17;   // [0][16] 抽奖
    bool                    send_from_me    = 18;   // [0][15].extra
    Check                   check           = 19;   // [9]   
    User                    user            = 20;   // [2]    用户主站信息
    Room                    room            = 21;   // [3]    粉丝勋章
    Icon                    icon            = 22;   // [0][15].extra
    Reply                   reply           = 23;   //
    // bytes                   unknown24       = 24;   //
    // bytes                   unknown25       = 25;   //
    // bytes                   unknown26       = 26;   //
    // bytes                   unknown27       = 27;   //
    // bytes                   unknown28       = 28;   //
    // bytes                   unknown29       = 29;   //
    // bytes                   unknown30       = 30;   //
    // bytes                   unknown31       = 31;   //
    // bytes                   unknown32       = 32;   //
}
enum BizScene{                                      //11
    BizSceneNone                            = 0;    
    BizSceneLottery                         = 1;    
    BizSceneSurvive                         = 2;    //抽奖
    BizSceneVoiceConn                       = 3;    
    BizScenePlayBack                        = 4;    
    BizSceneVote                            = 5;    
}
enum DmType{                                        //13
    DmTypeNormal                            = 0;
    DmTypeEmoticon                          = 1;
    DmTypeVoice                             = 2;
}
message Check{                                      //19
    //bilibiliDm.community.service.dm.live.Check
    string      token                       = 1;    // [9].ct
    int64       ts                          = 2;    // [9].ts
}
message Room{                                       //21
    //bilibiliDm.community.service.dm.live.Room
    int64       uid                         = 1;    // [3][12] anchorId
    string      name                        = 2;    // [3] [2] anchorUsername
    uint32      roomid                      = 3;    // 当前直播间 长ID ！非官方
}
message Bubble{                                     //12
    //bilibiliDm.community.service.dm.live.Bubble
    int64       id                          = 1;    // [0][10]
    string      color                       = 2;    // [0][11]
    int64       id_v2                       = 3;    // [0][17]
}
message emots_temp{                                      //14-1
    string      key                         = 1;    // [0][15].extra.emots
    Emoticon    value                       = 2;    // [0][15].extra.emots
}
message Emoticon{                                   //14-2
    //bilibiliDm.community.service.dm.live.Emoticon
    string      unique                      = 1;    // [0][15].extra.emots.emoticon_unique
    string      url                         = 2;    // [0][15].extra.emots.emots_url
    bool        is_dynamic                  = 3;    // [0][15].extra.emots.is_dynamic
    int64       in_player_area              = 4;    // [0][15].extra.emots.in_player_area
    int64       bulge_display               = 5;    // [0][15].extra.emots.bulge_display
    int64       height                      = 6;    // [0][15].extra.emots.height
    int64       width                       = 7;    // [0][15].extra.emots.width
}
message Voice{                                      //15
    //bilibiliDm.community.service.dm.live.Voice
    string      url                         = 1;    // [0][14]
    string      file_format                 = 2;    // [0][14]
    string      text                        = 3;    // [0][14]
    int64       file_duration               = 4;    // [0][14]
    string      file_id                     = 5;    // [0][14]
}
message Aggregation{                                //17
    //bilibiliDm.community.service.dm.live.Aggregation
    bool        is_aggregation              = 1;
    int64       activity_source             = 2;    // [0][16]
    string      activity_identity           = 3;    // [0][16]
    int32       not_show                    = 4;    // [0][16]
}
message User{                                       //20
    //bilibiliDm.community.service.dm.live.User
    int64       uid                         = 1;    // [2][0] 用户uid
    string      name                        = 2;    // [2][1] 昵称
    string      name_color                  = 3;    // [2][7] usernameColor
    string      face                        = 4;    // 用户头像URL
    int64       vip                         = 5;    // [2][3]
    int64       svip                        = 6;    // [2][4]
    int32       rank                        = 7;    // [2][5]
    int32       mobile_verify               = 8;    // [2][6] 手机号验证
    int64       lpl_status                  = 9;    // [14]?
    int64       attr                        = 10;   // [2][2] 房管 isAdmin
    Medal       medal                       = 11;   // [3] 粉丝勋章
    UserLevel   level                       = 12;   // [4] 用户直播区信息
    Title       title                       = 13;   // [5] 头衔
    Identify    identify                    = 14;   //
    Wealth      wealth                      = 15;   // 20230601~20230620
    GroupMedal  group_medal                 = 16;   //
}
message Identify{                                   //20-14
    //bilibiliDm.community.service.dm.live.Identify
    string      beginning_url               = 1;
    string      ending_url                  = 2;
    string      jump_to_url                 = 3;
}
message Medal{                                      //20-11
    //bilibiliDm.community.service.dm.live.Medal
    int64       level                       = 1;    // [3][0] 粉丝勋章等级
    string      name                        = 2;    // [3][1] 粉丝勋章称号
    string      special                     = 3;    // [3][5]
    int64       color                       = 4;    // [3][4]
    int64       icon_id                     = 5;    // [3][6]
    int64       border_color                = 6;    // [3][8]
    int64       gradient_start_color        = 7;    // [3][7]
    int64       gradient_end_color          = 8;    // [3][9]
    int64       privilege                   = 9;    // [3][10] 粉丝勋章 舰长等级
    int64       light                       = 10;   // [3][11]
}
message UserLevel{                                  //20-12
    //bilibiliDm.community.service.dm.live.UserLevel
    int64       level                       = 1;    // [4][0]
    int64       color                       = 2;    // [4][2]
    string      rank                        = 3;    // [4][3]
    int64       online_rank                 = 4;    // [4][4] 高能榜实时排名(仅前三)
}
message Title{                                      //20-13
    //bilibiliDm.community.service.dm.live.Title
    string      title                       = 1;    // [5]
    string      old_title                   = 2;    // [5]
}
message Record{
    //bilibiliDm.community.service.dm.live.Record
    string      dmid                        = 1;
    int64       time_offset                 = 2;
}
message Wealth{                                     //20-15
    //bilibiliDm.community.service.dm.live.Wealth
    int64       level                       = 1;    // [16][0]
}
message Icon{                                       //22
    // bilibiliDm.community.service.dm.live.Icon
    Prefix      prefix                      = 1;    //[0][15].extra.icon
}
message Prefix{
    // bilibiliDm.community.service.dm.live.Prefix
    int32       type                        = 1;
    string      resource                    = 2;
}
message GroupMedal{                                 //17
    //bilibiliDm.community.service.dm.live.GroupMedal
    int64       medal_id                    = 1;    //[17][0]
    string      name                        = 2;    //[17][1]
    int64       is_lighted                  = 3;    //[17][2]
}
message Reply{                                      //23
    bool        show_reply                  = 1;    //[0][15].extra
    int64       reply_mid                   = 2;    //[0][15].extra
    string      reply_uname                 = 3;    //[0][15].extra
    string      reply_uname_color           = 4;    //[0][15].extra
}